TRIVIAL building a POC

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -10,11 +10,11 @@ parts =
 [project]
 name = infi.app_repo
 namespace_packages = ['infi']
-install_requires = ['distribute']
+install_requires = ['mako', 'gevent', 'CherryPy', 'distribute', 'redis', 'uwsgi']
 version_file = src/infi/app_repo/__version__.py
 description = A user-friendly RPM/DEP repository
 long_description = A user-friendly RPM/DEB repository
-console_scripts = []
+console_scripts = ['quickstart = infi.app_repo.scripts:quickstart']
 package_data = []
 upgrade_code = {c9f562e3-f915-11e1-871f-1093e90fe436}
 product_name = infi.app_repo
@@ -52,8 +52,6 @@ eggs = ${project:name}
 	ipython
 	nose
 	mock
-	coverage
-	pylint
 	infi.unittest
 	infi.traceback
 interpreter = python
@@ -76,4 +74,28 @@ company = None
 [sublime]
 recipe = corneti.recipes.codeintel
 eggs = ${development-scripts:eggs}
+
+[createrepo]
+recipe = zerokspot.recipe.git
+repository = git://createrepo.baseurl.org/createrepo.git
+rev = origin/master
+newest = true
+
+[yum]
+recipe = zerokspot.recipe.git
+repository = git://yum.baseurl.org/yum.git
+rev = origin/master
+newest = true
+
+[yum-utils]
+recipe = zerokspot.recipe.git
+repository = git://yum.baseurl.org/yum-utils.git
+rev = origin/master
+newest = true
+
+[yum-metadata-parser]
+recipe = zerokspot.recipe.git
+repository = git://yum.baseurl.org/yum-metadata-parser.git
+rev = origin/master
+newest = true
 
