TRIVIAL company in buildout

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -9,6 +9,7 @@ parts =
 
 [project]
 name = infi.app_repo
+company = Infinidat
 namespace_packages = ['infi']
 install_requires = ['mako', 'infi.execute', 'pexpect', 'CherryPy', 'passlib', 'python-cjson', 'distribute', 'gevent', 'infi.pyutils', 'python-crontab']
 version_file = src/infi/app_repo/__version__.py
@@ -69,7 +70,6 @@ eggs = ${development-scripts:eggs}
 
 [pack]
 recipe = infi.recipe.application_packager
-company = None
 deb-dependencies = dpkg
 	alien
 	createrepo
