--- a/src/infi/app_repo/vsftpd.conf
+++ b/src/infi/app_repo/vsftpd.conf
@@ -28,7 +28,7 @@ connect_from_port_20=YES
 ftpd_banner=Welcome to application repository.
 #
 # This option represents a directory which vsftpd will try to change into after an anonymous login. Failure is silently ignored.
-anon_root=/root/app-repo/data/
+anon_root=
 
 # This controls whether any FTP commands which change the filesystem are allowed  or  not.  These  commands are: STOR, DELE, RNFR, RNTO, MKD, RMD, APPE and SITE.
 write_enable=YES
