--- a/buildout.cfg
+++ b/buildout.cfg
@@ -19,7 +19,7 @@ console_scripts = ['webserver = infi.app_repo.scripts:webserver', 'process_incom
 package_data = ['gpg_batch_file', '*.css', '*.ico', '*.mako', '*.png', '*.js', 'vsftpd.conf']
 upgrade_code = {c9f562e3-f915-11e1-871f-1093e90fe436}
 product_name = Application Repository
-post_install_script_name = None
+post_install_script_name = post_install
 pre_uninstall_script_name = None
 
 [isolated-python]
