TRIVIAL more fixes

--- a/src/infi/app_repo/vsftpd.conf
+++ b/src/infi/app_repo/vsftpd.conf
@@ -32,3 +32,6 @@ anon_root=
 
 # This controls whether any FTP commands which change the filesystem are allowed  or  not.  These  commands are: STOR, DELE, RNFR, RNTO, MKD, RMD, APPE and SITE.
 write_enable=YES
+
+# The file mode to force for chown()ed anonymous uploads.
+chown_upload_mode=0644
