TRIVIAL fixing default permissions and umask for vsftpd

--- a/src/infi/app_repo/vsftpd.conf
+++ b/src/infi/app_repo/vsftpd.conf
@@ -35,3 +35,10 @@ write_enable=YES
 
 # The file mode to force for chown()ed anonymous uploads.
 chown_upload_mode=0644
+
+# The permissions with which uploaded files are created. Umasks are applied on top of this value.  You  may wish to change to 0777 if you want uploaded files to be executable.
+file_open_mode=0644
+
+#The  value that the umask for file creation is set to for local users. NOTE! If you want to specify octal values, remember the "0" prefix otherwise the value will be treated as a base 10 integer!
+local_umask=000
+
