--- a/tests/make_appliance/template.in
+++ b/tests/make_appliance/template.in
@@ -140,7 +140,7 @@ wget PEM_URL -O /tmp/my_pem_file.pem
 			<vadk:Package vadk:name="libossp-uuid16"/>
 			<vadk:Package vadk:name="libuuid1"/>
 			<vadk:Package vadk:name="build-essential"/>
-			<vadk:Package vadk:name="libgrcypt11"/>
+			<vadk:Package vadk:name="libgcrypt11"/>
 			<vadk:Package vadk:name="libtasn1-3"/>
 			<vadk:Package vadk:name="libgnutls26"/>
 			<vadk:Package vadk:name="libsasl2"/>
