--- a/tests/make_appliance/template.in
+++ b/tests/make_appliance/template.in
@@ -146,7 +146,7 @@ wget PEM_URL -O /tmp/my_pem_file.pem
 			<vadk:Package vadk:name="libsasl2-2"/>
 			<vadk:Package vadk:name="libsasl2-modules"/>
 			<vadk:Package vadk:name="libldap-2.4-2"/>
-			<vadk:Package vadk:name="libnspr4"/>
+			<vadk:Package vadk:name="libnspr4-0d"/>
 			<vadk:Package vadk:name="libnss3"/>
 			<vadk:Package vadk:name="python-support"/>
 			<vadk:Package vadk:name="libsqlite0"/>
