--- a/tests/make_appliance/template.in
+++ b/tests/make_appliance/template.in
@@ -162,6 +162,7 @@ wget PEM_URL -O /tmp/my_pem_file.pem
 			<vadk:Package vadk:name="liblua5.1-0"/>
 			<vadk:Package vadk:name="liblzma1"/>
 			<vadk:Package vadk:name="zlib1g"/>
+			<vadk:Package vadk:name="ssl-cert"/>
 		</vadk:OSPackages>
 		<vadk:PackagesToRemove><!-- vadk:Package vadk:name="" / --></vadk:PackagesToRemove>
 		<vadk:BootActions>
