TRIVIAL print_metadata

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -15,7 +15,7 @@ install_requires = ['mako', 'infi.execute', 'pexpect', 'CherryPy', 'passlib', 'p
 version_file = src/infi/app_repo/__version__.py
 description = A user-friendly RPM/DEP repository
 long_description = A user-friendly RPM/DEB repository
-console_scripts = ['webserver = infi.app_repo.scripts:webserver', 'process_incoming = infi.app_repo.scripts:process_incoming', 'quickstart = infi.app_repo.scripts:quickstart', 'post_install = infi.app_repo.scripts:post_install']
+console_scripts = ['print_metadata = infi.app_repo.scripts:print_metadata', 'webserver = infi.app_repo.scripts:webserver', 'process_incoming = infi.app_repo.scripts:process_incoming', 'post_install = infi.app_repo.scripts:post_install', 'quickstart = infi.app_repo.scripts:quickstart']
 package_data = ['gpg_batch_file', '*.css', '*.ico', '*.mako', '*.png', '*.js', 'vsftpd.conf']
 upgrade_code = {c9f562e3-f915-11e1-871f-1093e90fe436}
 product_name = Application Repository
