--- a/buildout.cfg
+++ b/buildout.cfg
@@ -11,16 +11,16 @@ parts =
 name = infi.app_repo
 company = Infinidat
 namespace_packages = ['infi']
-install_requires = ['mako', 'infi.execute', 'pexpect', 'CherryPy', 'passlib', 'python-cjson', 'distribute', 'gevent', 'infi.pyutils', 'infi.traceback', 'python-crontab']
+install_requires = ['mako', 'infi.execute', 'pexpect', 'CherryPy', 'passlib', 'python-cjson', 'distribute', 'celery', 'waiting', 'gevent', 'schematics', 'infi.pyutils', 'infi.traceback', 'docopt', 'python-crontab']
 version_file = src/infi/app_repo/__version__.py
 description = A user-friendly RPM/DEP repository
 long_description = A user-friendly RPM/DEB repository
-console_scripts = ['print_metadata = infi.app_repo.scripts:print_metadata', 'webserver = infi.app_repo.scripts:webserver', 'process_incoming = infi.app_repo.scripts:process_incoming', 'post_install = infi.app_repo.scripts:post_install', 'quickstart = infi.app_repo.scripts:quickstart']
+console_scripts = ['app_repo = infi.app_repo.scripts:app_repo']
 package_data = ['gpg_batch_file', '*.css', '*.ico', '*.mako', '*.png', '*.js', 'vsftpd.conf']
 upgrade_code = {c9f562e3-f915-11e1-871f-1093e90fe436}
 product_name = Application Repository
-post_install_script_name = post_install
-pre_uninstall_script_name = None
+post_install_script_name = app_repo
+post_install_script_args = install
 
 [isolated-python]
 recipe = infi.recipe.python
@@ -70,6 +70,8 @@ eggs = ${development-scripts:eggs}
 
 [pack]
 recipe = infi.recipe.application_packager
+eggs = infi.app_repo
+	celery
 deb-dependencies = dpkg
 	alien
 	createrepo
@@ -77,6 +79,7 @@ deb-dependencies = dpkg
 	vsftpd
 	rng-tools
 	dpkg-sig
+	rabbitmq-server
 
 [sublime]
 recipe = corneti.recipes.codeintel
