--- a/buildout.cfg
+++ b/buildout.cfg
@@ -11,7 +11,7 @@ parts =
 name = infi.app_repo
 company = Infinidat
 namespace_packages = ['infi']
-install_requires = ['infi.execute', 'infi.traceback', 'CherryPy', 'infi.recipe.console_scripts', 'distribute', 'celery-with-redis', 'gevent', 'schematics', 'python-crontab==1.3', 'mako', 'pexpect', 'passlib', 'python-cjson', 'redis', 'celery', 'waiting', 'infi.watchdog', 'infi.pyutils', 'docopt', 'pam']
+install_requires = ['infi.execute', 'infi.traceback', 'CherryPy', 'infi.recipe.console_scripts', 'distribute', 'celery-with-redis', 'gevent', 'python-crontab==1.3', 'schematics', 'mako', 'pexpect', 'passlib', 'python-cjson', 'redis', 'waiting', 'celery', 'zc.buildout', 'infi.watchdog', 'infi.pyutils', 'docopt', 'pam']
 version_file = src/infi/app_repo/__version__.py
 description = A user-friendly RPM/DEP repository
 long_description = A user-friendly RPM/DEB repository
