--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,6 +3,7 @@ include-site-packages = false
 relative-paths = false
 unzip = true
 newest = false
+prefer-final = false
 download-cache = .cache
 develop = .
 parts = 
