--- a/buildout.cfg
+++ b/buildout.cfg
@@ -6,7 +6,7 @@ newest = false
 prefer-final = false
 download-cache = .cache
 develop = .
-parts = 
+parts =
 
 [project]
 name = infi.app_repo
@@ -17,7 +17,7 @@ version_file = src/infi/app_repo/__version__.py
 description = A user-friendly RPM/DEP repository
 long_description = A user-friendly RPM/DEB repository
 console_scripts = ['app_repo = infi.app_repo.scripts:app_repo']
-package_data = ['gpg_batch_file', '*.css', '*.ico', '*.mako', '*.png', '*.js', 'vsftpd.conf']
+package_data = ['*.css', 'vsftpd.conf', '*.mako', 'gpg_batch_file', '*.png', '*.ico', 'nginx.conf', '*.js']
 upgrade_code = {c9f562e3-f915-11e1-871f-1093e90fe436}
 product_name = Application Repository
 post_install_script_name = app_repo
@@ -81,6 +81,7 @@ deb-dependencies = dpkg
 	rng-tools
 	dpkg-sig
 	redis-server
+	nginx
 
 [sublime]
 recipe = corneti.recipes.codeintel
