--- a/src/infi/app_repo/nginx.conf
+++ b/src/infi/app_repo/nginx.conf
@@ -8,10 +8,12 @@ server {
     location                    ~ ^/$ {
         proxy_pass              http://localhost:8000;
         proxy_set_header        X-Real-IP $remote_addr;
+        proxy_set_header        Host $host;
     }
     location                    ~ ^/(pull|push|setup|queue|task|inventory).* {
         proxy_pass              http://localhost:8000;
         proxy_set_header        X-Real-IP $remote_addr;
+        proxy_set_header        Host $host;
     }
     location                    /favicon.ico {
         sendfile                on;
