--- a/buildout.cfg
+++ b/buildout.cfg
@@ -12,7 +12,7 @@ parts =
 name = infi.app_repo
 company = Infinidat
 namespace_packages = ['infi']
-install_requires = ['redis>=2.8.0', 'celery-with-redis>=3.0', 'infi.execute>=0.0.15', 'schematics>=0.9-1', 'infi.traceback>=0.3.5', 'infi.recipe.console-scripts>=0.3.10', 'gevent>=1.0rc2', 'celery>=3.0.24', 'python-cjson>=1.0.5', 'CherryPy>=3.2.4', 'pexpect>=2.4', 'python-crontab==1.3', 'zc.buildout>=2.2.1', 'mako', 'passlib>=1.6.1', 'infi.pyutils>=1.0.3', 'infi.watchdog>=0.6.3', 'docopt>=0.6.1', 'waiting>=1.0.1', 'pam>=0.1.4', 'distribute>=0.7.3']
+install_requires = ['infi.execute', 'schematics', 'CherryPy', 'distribute', 'celery-with-redis', 'gevent', 'python-crontab==1.3', 'infi.traceback', 'mako', 'pexpect', 'passlib', 'python-cjson', 'infi.recipe.console-scripts', 'redis', 'waiting', 'celery', 'zc.buildout', 'infi.watchdog', 'infi.pyutils', 'docopt', 'pam']
 version_file = src/infi/app_repo/__version__.py
 description = A user-friendly RPM/DEP repository
 long_description = A user-friendly RPM/DEB repository
@@ -86,51 +86,4 @@ deb-dependencies = dpkg
 [sublime]
 recipe = corneti.recipes.codeintel
 eggs = ${development-scripts:eggs}
-
-[versions]
-infi.recipe.template.version = 0.4.12
-collective.recipe.template = 1.10
-git-py = 1.0.0
-Mako = 0.9.0
-MarkupSafe = 0.18
-PyYAML = 3.10
-amqp = 1.0.13
-anyjson = 0.3.3
-argh = 0.23.3
-billiard = 2.7.3.34
-infi.traceback = 0.3.5
-infi.unittest = 0.0.18
-ipython = 1.1.0
-kombu = 2.5.15
-mock = 1.0.1
-nose = 1.3.0-2
-python-dateutil = 2.1
-sentinels = 0.0.6
-setuptools = 1.1.6
-zc.buildout = 2.2.1
-zc.recipe.egg = 2.0.1
-CherryPy = 3.2.4
-celery = 3.0.24
-celery-with-redis = 3.0
-distribute = 0.7.3
-docopt = 0.6.1
-emport = 1.0.0
-gevent = 1.0rc2
-greenlet = 0.4.1
-infi.exceptools = 0.2.2
-infi.execute = 0.0.15
-infi.pyutils = 1.0.3
-infi.recipe.console-scripts = 0.3.10
-infi.watchdog = 0.6.3
-pam = 0.1.4
-passlib = 1.6.1
-pathtools = 0.1.2
-pexpect = 2.4
-pyforge = 1.0.0
-python-cjson = 1.0.5
-redis = 2.8.0
-schematics = 0.9-1
-six = 1.4.1
-waiting = 1.0.1
-z3c.recipe.scripts = 1.0.1
 
