--- a/buildout.cfg
+++ b/buildout.cfg
@@ -12,7 +12,28 @@ parts =
 name = infi.app_repo
 company = Infinidat
 namespace_packages = ['infi']
-install_requires = ['infi.execute', 'schematics', 'CherryPy', 'distribute', 'celery-with-redis', 'infi.traceback', 'gevent', 'python-crontab==1.3', 'mako', 'pexpect', 'passlib', 'python-cjson', 'zc.buildout', 'infi.recipe.console-scripts', 'redis', 'waiting', 'celery', 'infi.recipe.buildout_logging', 'infi.watchdog', 'infi.pyutils', 'docopt', 'pam']
+install_requires = ['celery-with-redis>=3.0',
+	 'celery>=3.1.9',
+	 'CherryPy>=3.2.4',
+	 'distribute>=0.7.3',
+	 'docopt>=0.6.1',
+	 'gevent>=1.0',
+	 'infi.execute>=0.0.16',
+	 'infi.pyutils>=1.0.3',
+	 'infi.recipe.buildout-logging>=0.1',
+	 'infi.recipe.console-scripts>=0.3.12',
+	 'infi.traceback>=0.3.5',
+	 'infi.watchdog>=0.6.3',
+	 'mako',
+	 'pam>=0.1.4',
+	 'passlib>=1.6.2',
+	 'pexpect>=3.1',
+	 'python-cjson>=1.0.5',
+	 'python-crontab==1.3',
+	 'redis>=2.9.1',
+	 'schematics>=0.9-1',
+	 'waiting>=1.0.1',
+	 'zc.buildout>=2.2.1']
 version_file = src/infi/app_repo/__version__.py
 description = A user-friendly RPM/DEP repository
 long_description = A user-friendly RPM/DEB repository
@@ -86,4 +107,54 @@ deb-dependencies = dpkg
 [sublime]
 recipe = corneti.recipes.codeintel
 eggs = ${development-scripts:eggs}
+
+[versions]
+amqp = 1.4.3
+anyjson = 0.3.3
+argh = 0.24.1
+billiard = 3.3.0.16
+celery = 3.1.9
+celery-with-redis = 3.0
+CherryPy = 3.2.4
+collective.recipe.template = 1.11
+distribute = 0.7.3
+docopt = 0.6.1
+emport = 1.0.0
+gevent = 1.0
+git-py = 1.0.0
+greenlet = 0.4.2
+infi.exceptools = 0.2.3
+infi.execute = 0.0.16
+infi.monotonic-time = 0.1.1
+infi.pyutils = 1.0.3
+infi.recipe.buildout-logging = 0.1
+infi.recipe.console-scripts = 0.3.12
+infi.recipe.template.version = 0.4.13
+infi.traceback = 0.3.5
+infi.unittest = 1.1.0
+infi.watchdog = 0.6.3
+ipython = 1.2.0
+kombu = 3.0.12
+Mako = 0.9.1
+MarkupSafe = 0.18
+mock = 1.0.1
+munch = 2.0.2
+nose = 1.3.0-2
+pam = 0.1.4
+passlib = 1.6.2
+pathtools = 0.1.2
+pexpect = 3.1
+pyforge = 1.2.0
+python-cjson = 1.0.5
+pytz = 2013.9
+PyYAML = 3.10
+redis = 2.9.1
+schematics = 0.9-1
+sentinels = 0.0.6
+setuptools = 2.2
+six = 1.5.2
+waiting = 1.0.1
+z3c.recipe.scripts = 1.0.1
+zc.buildout = 2.2.1
+zc.recipe.egg = 2.0.1
 
