buildout.cfg: remove celery from requirements

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -12,8 +12,7 @@ parts =
 name = infi.app_repo
 company = Infinidat
 namespace_packages = ['infi']
-install_requires = ['celery',
-	 'CherryPy',
+install_requires = ['CherryPy',
 	 'distribute',
 	 'docopt',
 	 'gevent',
