--- a/buildout.cfg
+++ b/buildout.cfg
@@ -28,6 +28,7 @@ install_requires = ['CherryPy',
 	 'pexpect',
 	 'python-cjson',
 	 'python-crontab==1.3',
+	 'redis>=2.4.4',
 	 'schematics',
 	 'waiting',
 	 'zc.buildout']
