buildout.cfg: adding celery>=3.0,<4.0 to requirements

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -12,7 +12,8 @@ parts =
 name = infi.app_repo
 company = Infinidat
 namespace_packages = ['infi']
-install_requires = ['CherryPy',
+install_requires = ['celery>=3.0,<4.0',
+	 'CherryPy',
 	 'distribute',
 	 'docopt',
 	 'gevent',
