--- a/src/infi/app_repo/nginx.conf
+++ b/src/infi/app_repo/nginx.conf
@@ -1,6 +1,7 @@
 server {
     listen                      80;
     location                    / {
+        autoindex               on;
         sendfile                on;
         tcp_nopush              on;
         root                    /opt/infinidat/application-repository/data/;
