HOSTDEV-1469 changing grub timeout from -1 to 5 seconds
Ubuntu-12.04 has this problem when if it was not cleanly shut down, next time it will stop at GRUB

--- a/tests/make_appliance/template.in
+++ b/tests/make_appliance/template.in
@@ -502,6 +502,11 @@ rm -rf /var/lib/apt/lists/gb*
 dd if=/dev/zero of=/var/log/zerofile || true
 rm /var/log/zerofile
 ln -sf /usr/lib/vmware-tools/sbin/vmware-rpctool /usr/sbin/vmware-rpctool
+
+# fix grub timeout
+sed -ie 's/timeout=-1/timeout=5/' /etc/grub.d/00_header
+update-grub
+
 </vadk:PostInstallShellScript>
 	</Section>
 <!--
