--- a/buildout.cfg
+++ b/buildout.cfg
@@ -6,7 +6,7 @@ newest = false
 prefer-final = false
 download-cache = .cache
 develop = .
-parts = 
+parts =
 
 [project]
 name = infi.app_repo
@@ -14,13 +14,12 @@ company = Infinidat
 namespace_packages = ['infi']
 install_requires = ['celery>=3.0,<4.0',
 	 'CherryPy',
-	 'distribute',
+	 'setuptools',
 	 'docopt',
 	 'gevent',
 	 'infi.execute',
 	 'infi.pyutils',
 	 'infi.recipe.buildout-logging',
-	 'infi.recipe.console-scripts',
 	 'infi.traceback',
 	 'infi.watchdog',
 	 'mako',
