buildout.cfg: adding setuptools to requirements

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -28,6 +28,7 @@ install_requires = ['celery>=3.0,<4.0',
 	 'python-crontab==1.3',
 	 'redis>=2.4.4',
 	 'schematics',
+	 'setuptools',
 	 'waiting',
 	 'zc.buildout']
 version_file = src/infi/app_repo/__version__.py
