--- a/buildout.cfg
+++ b/buildout.cfg
@@ -99,7 +99,7 @@ deb-dependencies = dpkg
 	rng-tools
 	dpkg-sig
 	redis-server
-	nginx >= 1.4.1
+	nginx (>= 1.4.1)
 
 [sublime]
 recipe = corneti.recipes.codeintel
