--- a/buildout.cfg
+++ b/buildout.cfg
@@ -10,6 +10,7 @@ parts =
 
 [project]
 name = infi.app_repo
+homepage = https://github.com/Infinidat/${project:name}
 company = Infinidat
 namespace_packages = ['infi']
 install_requires = ['celery>=3.0,<4.0',
